rename curational statement

--- a/a/index.html
+++ b/a/index.html
@@ -2,6 +2,6 @@
 
 <p>Этот объект является частью фестиваля и предназначен для проверки полной связности между работами фестиваля</p>
 
-<a rel="onlinefestivalstatement" href="forecast2020.txt">Кураторское заявление</a>
+<a rel="onlinefestivalstatement" href="forecast2022.txt">Кураторское заявление</a>
 
-<p>Переходите к  <a rel="onlinefestivalstatement" href="/connectedness-checker/b">объекту B</a></p>
+<p>Переходите к  <a rel="onlinefestival" href="/connectedness-checker/b/index.html">объекту B</a></p>
