--- a/d/index.html
+++ b/d/index.html
@@ -1,5 +1,5 @@
 <h1>Теперь Вы попали на страницу объекта D Online фестиваля Forecast2022</h1>
 
-<p>Эта работа аналогично всем остальным служит только для проверки связности, преходите к <a rel="onlinefestival" href="/connectedness-checker/е/index.html">объекту C</a> </p>
+<p>Эта работа аналогично всем остальным служит только для проверки связности, преходите к <a rel="onlinefestival" href="/connectedness-checker/c/index.html">объекту C</a> </p>
 
 <a rel="onlinefestivalstatement" href="forecast2022.txt">Читайте кураторское заявление</a>
