--- a/b/index.html
+++ b/b/index.html
@@ -4,4 +4,4 @@
 
 <a rel="onlinefestivalstatement" href="forecast2022.txt">Кураторское заявление</a>
 
-<p>Переходите к  <a rel="onlinefestival" href="/connectedness-checker/с/index.html">объекту С</a> или возвращайтесь к <a rel="onlinefestival" href="/connectedness-checker/a/index.html">объекту A</a></p>
+<p>Переходите к  <a rel="onlinefestival" href="/connectedness-checker/c/index.html">объекту С</a> или возвращайтесь к <a rel="onlinefestival" href="/connectedness-checker/a/index.html">объекту A</a></p>
