--- a/e/index.html
+++ b/e/index.html
@@ -1,5 +1,5 @@
 <h1>Вы попали на страницу объекта Е Online фестиваля Forecast2022</h1>
 
-<p>Эта работа служит только для проверки связности, преходите к <a rel="onlinefestival" href="/connectedness-checker/е/index.html">объекту Е</a> </p>
+<p>Эта работа служит только для проверки связности, преходите к <a rel="onlinefestival" href="/connectedness-checker/d/index.html">объекту D</a> </p>
 
 <a rel="onlinefestivalstatement" href="forecast2022.txt">Кураторское заявление</a>
