--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <h1>connectedless checker</h1>
 
-<p>Эта работа показывает предложенные принципы онлайн-фестиваля и является его частью.</p>
+<p>Эта работа показывает <a rel="onlinefestivalstatement" href="forecast2022.txt">предложенные принципы</a> онлайн-фестиваля и является его частью.</p>
+
+Вы также можете 
 
 <p>Вы можете видеть две группы страниц: 
-	<p><a rel="onlinefestival" href="">первая [Online Festival Artwork]</a> отражает группу страниц, являющихся работами фестиваля. Эти страницы ссылаются друг на друга (и на эту страницу), содержат пример <a href="">Новой страницы</a>, на которую пока нет ссылок</p>
+	<p><a rel="onlinefestival" href="artwork/artworks-index">первая [Online Festival Artwork]</a> отражает группу страниц, являющихся работами фестиваля. Эти страницы ссылаются друг на друга (и на эту страницу), содержат пример <a href="">Новой страницы</a>, на которую пока нет ссылок</p>
 
 	<p><a href="">Вторая группа</a> содержит страницы с нарушенным curational statement, которые не могут считаться частью фестиваля. И остальные страницы, ссылающиеся на них как на страницы работ фестиваля, нарушают правила и не являются частью фестиваля</p>
 </p>
 
-<p>Для проверки принадлежности страницы к онлайн-фестивалю и связности страниц фестиваля используется скрипт checker.py. Скрипт и инструкции по его запуску вы можете найти в <a href="">репозитории проекта</a></p>
+<p>Для проверки принадлежности страницы к онлайн-фестивалю и связности страниц фестиваля используется скрипт checker.py. Скрипт и инструкции по его запуску вы можете найти в <a href="https://github.com/onlinefestival/connectedness-checker">репозитории проекта</a></p>
