--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <h1>connectedless checker</h1>
 
-<p>Эта работа показывает <a rel="onlinefestivalstatement" href="forecast2022.txt">предложенные принципы</a> онлайн-фестиваля и является его частью.</p>
-
-Вы также можете 
+<p>Эта работа иллюстрирует <a rel="onlinefestivalstatement" href="forecast2022.txt">предложенные принципы</a> онлайн-фестиваля и является его частью.</p>
 
 <p>Вы можете видеть две группы страниц: 
 	<p><a rel="onlinefestival" href="artwork/artworks-index">первая [Online Festival Artwork]</a> отражает группу страниц, являющихся работами фестиваля. Эти страницы ссылаются друг на друга (и на эту страницу), содержат пример <a href="">Новой страницы</a>, на которую пока нет ссылок</p>
