--- a/artwork/artworks-index/index.html
+++ b/artwork/artworks-index/index.html
@@ -6,3 +6,5 @@
 	<li><a rel="onlinefestival" href="https://onlinefestival.github.io/connectedness-checker/">Connectedness checker</a></li>
 	<li><a rel="onlinefestival" href="https://glitchcore.github.io/onlinefestival.github.io/">Curatorial statement page</a></li>
 </ul>
+
+<a rel="onlinefestivalstatement" href="forecast2022.txt">Кураторское заявление</a>
