--- a/artwork/artworks-index/index.html
+++ b/artwork/artworks-index/index.html
@@ -7,4 +7,4 @@
 	<li><a rel="onlinefestival" href="https://glitchcore.github.io/onlinefestival.github.io/">Curatorial statement page</a></li>
 </ul>
 
-<a rel="onlinefestivalstatement" href="/connectedness-checker/artwork/artwork-index/forecast2022.txt">Кураторское заявление</a>
+<a rel="onlinefestivalstatement" href="forecast2022.txt">Кураторское заявление</a>
