shorten link, fix url ending error"

--- a/artwork/a/index.html
+++ b/artwork/a/index.html
@@ -4,4 +4,4 @@
 
 <a rel="onlinefestivalstatement" href="forecast2022.txt">Кураторское заявление</a>
 
-<p>Переходите к  <a rel="onlinefestival" href="/connectedness-checker/artwork/b/index.html">объекту B</a></p>
+<p>Переходите к  <a rel="onlinefestival" href="/connectedness-checker/artwork/b">объекту B</a></p>
