--- a/artwork/b/index.html
+++ b/artwork/b/index.html
@@ -4,4 +4,4 @@
 
 <a rel="onlinefestivalstatement" href="forecast2022.txt">Кураторское заявление</a>
 
-<p>Переходите к  <a rel="onlinefestival" href="/connectedness-checker/artwork/c/index.html">объекту С</a> или возвращайтесь к <a rel="onlinefestival" href="/connectedness-checker/artwork/a/index.html">объекту A</a></p>
+<p>Переходите к  <a rel="onlinefestival" href="/connectedness-checker/artwork/c">объекту С</a> или возвращайтесь к <a rel="onlinefestival" href="/connectedness-checker/artwork/a">объекту A</a></p>
