--- a/artwork/new/index.html
+++ b/artwork/new/index.html
@@ -2,4 +2,4 @@
 
 <p>Мы недавно создали этот объект, он соответствует <a rel="onlinefestivalstatement" href="forecast2022.txt">Кураторскому заявлению</a>, но на него еще никто не ссылается</p>
 
-<p>Вы можете посмотреть другие работы фестиваля. Например, переходите к  <a rel="onlinefestival" href="/connectedness-checker/artwork/e/index.html">объект E</a></p>
+<p>Вы можете посмотреть другие работы фестиваля. Например, переходите к  <a rel="onlinefestival" href="/connectedness-checker/artwork/e">объект E</a></p>
