--- a/artwork/b/index.html
+++ b/artwork/b/index.html
@@ -5,3 +5,5 @@
 <a rel="onlinefestivalstatement" href="forecast2022.txt">Кураторское заявление</a>
 
 <p>Переходите к  <a rel="onlinefestival" href="/connectedness-checker/artwork/c">объекту С</a> или возвращайтесь к <a rel="onlinefestival" href="/connectedness-checker/artwork/a">объекту A</a></p>
+
+<p><a rel="onlinefestival" href="artwork/artworks-index">Список работ фестиваля</a></p>
