--- a/artwork/b/index.html
+++ b/artwork/b/index.html
@@ -6,4 +6,4 @@
 
 <p>Переходите к  <a rel="onlinefestival" href="/connectedness-checker/artwork/c">объекту С</a> или возвращайтесь к <a rel="onlinefestival" href="/connectedness-checker/artwork/a">объекту A</a></p>
 
-<p><a rel="onlinefestival" href="artwork/artworks-index">Список работ фестиваля</a></p>
+<p><a rel="onlinefestival" href="/connectedness-checker/artwork/artworks-index">Список работ фестиваля</a></p>
