add nonartwork, add link suffixes

--- a/artwork/b/index.html
+++ b/artwork/b/index.html
@@ -4,6 +4,6 @@
 
 <a rel="onlinefestivalstatement" href="forecast2022.txt">Кураторское заявление</a>
 
-<p>Переходите к  <a rel="onlinefestival" href="/connectedness-checker/artwork/c">объекту С</a> или возвращайтесь к <a rel="onlinefestival" href="/connectedness-checker/artwork/a">объекту A</a></p>
+<p>Переходите к  <a rel="onlinefestival" href="/connectedness-checker/artwork/c">объекту С [FORECAST2022]</a> или возвращайтесь к <a rel="onlinefestival" href="/connectedness-checker/artwork/a">объекту A [FORECAST2022]</a></p>
 
-<p><a rel="onlinefestival" href="/connectedness-checker/artwork/artworks-index">Список работ фестиваля</a></p>
+<p><a rel="onlinefestival" href="/connectedness-checker/artwork/artworks-index">Список работ фестиваля [FORECAST2022]</a></p>
