--- a/nonartwork/c/index.html
+++ b/nonartwork/c/index.html
@@ -4,5 +4,5 @@
 
 <a rel="onlinefestivalstatement" href="forecast2022.txt">Кураторское заявление</a>
 
-<p>Теперь переходите к <a rel="onlinefestival" href="/connectedness-checker/artwork/e">объекту E [FORECAST2022]</a> или возвращайтесь к <a rel="onlinefestival" href="/connectedness-checker/artwork/b">объекту B [FORECAST2022]</a>, который является каталогом для работ</p>
+<p>Теперь переходите к <a rel="onlinefestival" href="/connectedness-checker/artwork/e">объекту E</a> или возвращайтесь к <a rel="onlinefestival" href="/connectedness-checker/artwork/b">объекту B</a>, который является каталогом для работ</p>
 
