--- a/artwork/artworks-index/index.html
+++ b/artwork/artworks-index/index.html
@@ -1,10 +1,10 @@
 <h1>Список работ онлайн-фестиваля</h1>
 
 <ul>
-	<li><a rel="onlinefestival" href="/connectedness-checker/artwork/a">Объект A</a></li>
-	<li><a rel="onlinefestival" href="/connectedness-checker/artwork/b">Объект B и другие</a></li>
-	<li><a rel="onlinefestival" href="https://onlinefestival.github.io/connectedness-checker/">Connectedness checker</a></li>
-	<li><a rel="onlinefestival" href="https://glitchcore.github.io/onlinefestival.github.io/">Curatorial statement page</a></li>
+	<li><a rel="onlinefestival" href="/connectedness-checker/artwork/a">Объект A [FORECAST2022]</a></li>
+	<li><a rel="onlinefestival" href="/connectedness-checker/artwork/b">Объект B и другие [FORECAST2022]</a></li>
+	<li><a rel="onlinefestival" href="https://onlinefestival.github.io/connectedness-checker/">Connectedness checker [FORECAST2022]</a></li>
+	<li><a rel="onlinefestival" href="https://glitchcore.github.io/onlinefestival.github.io/">Curatorial statement page [FORECAST2022]</a></li>
 </ul>
 
 <a rel="onlinefestivalstatement" href="forecast2022.txt">Кураторское заявление</a>
