--- a/nonartwork/a/index.html
+++ b/nonartwork/a/index.html
@@ -4,4 +4,4 @@
 
 <a rel="onlinefestivalstatement" href="forecast2022.txt">Кураторское заявление</a>
 
-<p>Переходите к  <a rel="onlinefestival" href="/connectedness-checker/artwork/b">объекту B [FORECAST2022]</a></p>
+<p>Переходите к  <a rel="onlinefestival" href="/connectedness-checker/artwork/b">объекту B</a></p>
